after merge from htm.core 22.4

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,10 @@
 # along with this program.  If not, see http://www.gnu.org/licenses.
 # -----------------------------------------------------------------------------
 
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.7...3.22.2)
+#    Means that CMake 3.7 is the minimum version but the build has been tested with CMake 3.22.2
+#    CMake versions higher than 3.22.2 are likely to work as well.
+
 project(htm_core CXX)
 
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}")
